src/objects/DMSPM__SPM_Log_Entry__c.object
<CustomObject>
    <fields>
        <fullName>DMSPM__Focus__c</fullName>
        <label>Focus</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Opportunity__c</fullName>
        <label>Opportunity</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Options__c</fullName>
        <label>Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__Page__c</fullName>
        <label>Page</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__SPM_Forecast__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPM Forecast</label>
        <referenceTo>DMSPM__SPM_Forecast__c</referenceTo>
        <relationshipName>SPM_Logged_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSPM__Tab__c</fullName>
        <label>Tab</label>
        <picklist>
            <picklistValues>
                <fullName>analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>insights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>learning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMSPM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SPM_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMSPM__View_Name__c</fullName>
        <label>View Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMSPM__View_Type__c</fullName>
        <label>View Type</label>
        <picklist>
            <picklistValues>
                <fullName>user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>total</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Dealmaker SPM Log Entry</label>
    <nameField>
        <displayFormat>SPM-{00000000}</displayFormat>
        <label>SPM Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealmaker SPM Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>